Mocks up the awesome conversation visibility solve!

--- a/project/apps/main_site/static/main_site/css/site.css
+++ b/project/apps/main_site/static/main_site/css/site.css
@@ -139,16 +139,15 @@ nav .logo {
 }
 
 .bubble.comments.floating {
-    padding: 10px;
+    padding: 0;
 
 }
 .bubble.comments.floating .comment {
     border: 1px solid #CCC;
     border-width: 0 0 1px 0;
-    margin: 0 0 10px 0;
-    padding: 5px;
+    padding: 10px 10px;
 }
-.bubble.comments.floating .comment .author {
+.author {
     background-size: cover;
     border-radius: 30px;
     height: 50px;
@@ -156,11 +155,41 @@ nav .logo {
     margin: 0 10px 2px 0;
     float: left;
 }
+.participants {
+    padding: 10px;
+}
+.participants .visible_to {
+    display: block;
+    clear: both;
+    font-weight: 200;
+    font-size: 10px;
+    text-align: center;
+    padding-top: 4px;
+}
+.convo_header {
+    border-bottom: 1px solid #CCC;
+}
+.convo_title {
+    background: #999;
+    /*background: #e68726;*/
+    color: #FFF;
+    text-align: center;
+    padding: 2px 0;
+    border-radius: 4px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+
+}
+.add_your_voice {
+    padding: 10px;
+
+}
 .bubble.comments.right_side {
     position: absolute;
     margin: 0;
-    right: 5%;
-    width: 20%;
+    right: 2%;
+    width: 24%;
+    border: 0;
 }
 .button, a.button {
     cursor: pointer;
